# options-dataframes

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  dependency_graph.html  dependency_graph.qmd  issues_notebook.github-issues  pyproject.toml  pyproject.toml_  ruff.toml
.github/: bug-report---.md  feature-request---.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature.md
.github/workflows/: CI.yml
examples/: example.ipynb  example.py  issues_notebook.github-issues
src/: __init__.py  impls.rs  lib.rs
