[package]
name = "options_dataframes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "options_dataframes"
crate-type = ["cdylib"]

[dependencies]
polars = "0.43.1"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
polars-arrow = "0.43.1"
