[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "options-dataframes"
version = "0.1.0"
authors = ["bwrob"]
description = "High-performance Black-Scholes calculations for dataframes."
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
polars = "^1.5.0"

[tool.poetry.group.dev.dependencies]
pre_commit = "^3.3.2"
ipykernel = "^6.29.5"
jupyter = "^1.0"


[tool.docformatter]
recursive = true
in-place = true
black = true
pre-summary-newline = false
blank = true

[tool.basedpyright]
# many settings are not enabled even in strict mode, which is why basedpyright includes an "all" option
# you can then decide which rules you want to disable
typeCheckingMode = "basic"
