[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "options_dataframes"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]

[tool.poetry]
name = "options_dataframes"
version = "0.1.0"
authors = ["bwrob"]
description = "High-performance Black-Scholes calculations for dataframes."
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
polars = "^1.8.2"
maturin = "^1.7.2"
pyarrow = "^17.0.0"

[tool.poetry.group.dev.dependencies]
pre_commit = "^3.3.2"
ipykernel = "^6.29.5"
jupyter = "^1.0"


[tool.docformatter]
recursive = true
in-place = true
black = true
pre-summary-newline = false
blank = true

[tool.basedpyright]
typeCheckingMode = "basic"
venvPath = "."
